--- a/Chefdog.WebControls/Chefdog.WebControls.SampleWebsite/Site.Master
+++ b/Chefdog.WebControls/Chefdog.WebControls.SampleWebsite/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - Chefdog ASP.net WebControls example</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -46,13 +46,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">Chefdog ASP.net Controls</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/">Samples</a></li>
+                        <li><a runat="server" href="~/About">Documentation</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,10 +61,12 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Chefdog ASP.net WebControls example</p>
             </footer>
         </div>
 
     </form>
 </body>
+
+<script type="text/javascript" src="Scripts/WebControls/cfg-webcontrols-1.0.js"></script>
 </html>
